--- a/final(3).Rmd
+++ b/final(3).Rmd
@@ -187,6 +187,7 @@ Now playing with and plotting predicted probabilities based on the model
 
 ```{r}
 
+library(prediction)
 #creating a data frame of fitted values for a hypothetical black woman
 
 blackfem_genY <- with(anes_genY, data.frame(female = 1, race = 2, vote_2008 = 0, unemployed = 0, education = factor(1:5))) 
@@ -196,6 +197,9 @@ blackfem_genY <- with(anes_genY, data.frame(female = 1, race = 2, vote_2008 = 0,
 blackfem_genY <- with(anes_genY, data.frame(caseID = factor(1:5), weights = .506, psu = 1, strata = 6, female = 1, race = 2, vote_2008 = 0, unemployed = 0, education = factor(1:5))) 
 
 #predict probability point estimates for each fitted value.
+
+blackfem_genY$predicted_prob <- prediction(M_genY, data = blackfem_genY, type = "response")
+
 blackfem_genY$predicted_prob <- predict(M_genY, newdata = blackfem_genY, type = "response", se = TRUE)
 #another alternative
 blackfem_genY$predicted_prob <- predict(M_genY, newdata = blackfem_genY, type = "response", 
