--- a/final(3).Rmd
+++ b/final(3).Rmd
@@ -217,21 +217,33 @@ prob_boomer_ed5 <- (exp(-0.87481 + 1.54687 + 0.22553 -0.76681))/(1+exp(-0.87481 
 
 
 
-
-# Note assumes a model with 3 explanatory variables
-predicted_fit <- function(alpha, beta1, beta2, beta3, beta4, beta5, x1, x2, x3, x4, x5, se1, se2, se3, se4, se5)
+predicted_fit <- function(alpha, beta1, beta2, beta3, beta4, beta5, 
+    x1, x2, x3, x4, x5, 
+    se1, se2, se3, se4, se5)
 {
-    fit <- alpha + beta1 * x1 + beta2 * x2 + beta3 * x3 + beta4 *x4 + beta5* x5
-    lb <- fit - (1.96 * se)
-    ub <- fit + (1.96 * se) 
-    predictions <- c(lb, fit, ub)
+lb_fun <- function(coef, se){
+    lb <- coef - (1.96 * se)
+    return(lb)
+}
 
-    probs <- function(x) {(exp(x)) / (1 + exp(x)) }
-    predictions <- probs(predictions)
-    return(predictions) 
-}  
+ub_fun <- function(coef, se){
+    ub <- coef + (1.96 * se)
+    return(ub)
+}
 
-predicted_fit(-0.17336, 0.23787, -0.43932, 0.08985, 0.96896, -0.01822, 1, 0, 1, 0, 2, 0.11959, 0.37259, 0.21844, 0.22869, 0.06800)
+fit <- alpha + beta1 * x1 + beta2 * x2 + beta3 * x3 + beta4 * x4 + beta5 * x5
+lb <- alpha + lb_fun(beta1, se1) * x1  + lb_fun(beta2, se2) * x2  + lb_fun(beta3, se3) * x3
+ub <- alpha + ub_fun(beta1, se1) * x1  + ub_fun(beta2, se2) * x2  + ub_fun(beta3, se3) * x3
+predictions <- c(lb, fit, ub)
+
+probs <- function(x) {(exp(x)) / (1 + exp(x)) }
+predictions <- probs(predictions)
+return(predictions) 
+}
+
+
+
+
 
 
 #creating a dataframe of predicted variables for plotting and other uses
