--- a/final(3).Rmd
+++ b/final(3).Rmd
@@ -50,15 +50,16 @@ anes <- anes[(anes$dem_edugroup_x == "Below high school" |
 anes$dem_edugroup_x <-  droplevels(anes$dem_edugroup_x)
 anes$dem_edugroup_x <- as.numeric(anes$dem_edugroup_x)
 
-#We renamed the labels pertaining to race and removed all missing data 
+#We renamed the labels pertaining to race, removed all missing data, and created dummies of black
+#and hispanic
 #table(anes$dem_raceeth_x) #race
-levels(anes$dem_raceeth_x) <- c("Data missing", "White", "Black", "Asian" , "Hawaiian or Pacif Islr", "Native American or Alaska Native", "Hispanic","Other") 
+levels(anes$dem_raceeth_x) <- c("Data missing", "White", "Black", "Asian" , "Native American or Alaska Native", "Hispanic","Other") 
 anes <- anes[!(anes$dem_raceeth_x == "Data missing"),] 
-anes$dem_raceeth_x <-  droplevels(anes$dem_raceeth_x)
-anes$dem_raceeth_x <- as.numeric(anes$dem_raceeth_x)
+anes$black <- anes$dem_raceeth_x == "Black"
+anes$black <- as.numeric(anes$black)
+anes$hispanic <- anes$dem_raceeth_x == "Hispanic"
+anes$hispanic <- as.numeric(anes$hispanic)
 
-#white = 1, black = 2, asian = 3, hawaiin/pacific islander = 4, native american = 5
-#hispanic = 6
 
 #We renamed the labels pertaining to voting in the 2008 election, dropped NA ones, and recoded #the remaining yes and no to be 1 or 0. 
 #table(anes$interest_voted2008) #voting in past election (2008)
@@ -73,16 +74,24 @@ anes$interest_voted2008[anes$interest_voted2008 == 2] <- 0
 anes$female <- anes$gender_respondent_x == "2. Female" #creates dummy gender #variable
 anes$female <- as.numeric(anes$female) 
 
-#We renamed the levels pertaining to employment status 
-#table(anes$dem_emptype_unemp) #employment status
-levels(anes$dem_emptype_unemp) <- c("No", "Yes")
-anes$unemployed <- anes$dem_emptype_unemp == "Yes"
-anes$unemployed <- as.numeric(anes$unemployed)
+library(rockchalk)
+#table(anes$inc_incgroup_pre) #income groups
+anes <- anes[!(anes$inc_incgroup_pre == "-9. Refused"),] 
+anes <- anes[!(anes$inc_incgroup_pre == "-8. Don't know"),] 
+anes <- anes[!(anes$inc_incgroup_pre == "-2. Missing; IWR mistakenly entered '2' in place of DK code for total income"),] 
+anes$inc_incgroup_pre <- combineLevels(anes$inc_incgroup_pre, c("01. Under $5,000", "02. $5,000-$9,999", "03. $10,000-$12,499", "04. $12,500-$14,999", "05. $15,000-$17,499", "06. $17,500-$19,999"), "Under 20k")
+anes$inc_incgroup_pre <- combineLevels(anes$inc_incgroup_pre, c("07. $20,000-$22,499", "08. $22,500-$24,999", "09. $25,000-$27,499", "10. $27,500-$29,999", "11. $30,000-$34,999", "12. $35,000-$39,999", "13. $40,000-$44,999"), "20k-45k")
+anes$inc_incgroup_pre <- combineLevels(anes$inc_incgroup_pre, c("14. $45,000-$49,999", "15. $50,000-$54,999", "16. $55,000-$59,999", "17. $60,000-$64,999"), "45k-65k")
+anes$inc_incgroup_pre <- combineLevels(anes$inc_incgroup_pre, c("18. $65,000-$69,999", "19. $70,000-$74,999", "20. $75,000-$79,999", "21. $80,000-$89,999"), "65k-90k")
+anes$inc_incgroup_pre <- combineLevels(anes$inc_incgroup_pre, c("22. $90,000-$99,999", "23. $100,000-$109,999", "24. $110,000-$124,999"), "90k-125k")
+anes$inc_incgroup_pre <- combineLevels(anes$inc_incgroup_pre, c("25. $125,000-$149,999", "26. $150,000-$174,999", "27. $175,000-$249,999"), "125-250k")
+levels(anes$inc_incgroup_pre) <- c("Under 20k", "20k-45k", "45k-65k", "65k-90k", "90k-125k", "125-250k", "28. $250,000 or more")
+anes$income <- as.numeric(anes$inc_incgroup_pre)
 
 #To simplify our task we create a smaller data set that includes all relevant variables
 #, which are listed below the code. 
 
-anes_small <- data.frame(anes$caseid, anes$dem_age_r_x, anes$dem_edugroup_x, anes$dem_raceeth_x, anes$unemployed, anes$female, anes$interest_voted2008, anes$postvote_rvote, anes$weight_full, anes$psu_full, anes$strata_full)
+anes_small <- data.frame(anes$caseid, anes$dem_age_r_x, anes$dem_edugroup_x, anes$black, anes$hispanic, anes$income, anes$female, anes$interest_voted2008, anes$postvote_rvote, anes$weight_full, anes$psu_full, anes$strata_full)
 
 #		"caseid" ,				      unique record identifiers
 		
@@ -102,13 +111,13 @@ anes_small <- data.frame(anes$caseid, anes$dem_age_r_x, anes$dem_edugroup_x, ane
 
 #   "unemployed"            respondent employment status 
 
-#  interest_voted2008       repsondents previous voting history
+#  interest_voted2008       2008 vote 
 
-#    postvote_rvote         ???
+#    postvote_rvote         2012 vote 
 
 
 # We named the variables so they are very easy to understand 
-colnames(anes_small) <- c("caseID", "age", "education", "race", "unemployed", "female", "vote_2008", "vote_2012", "weights", "psu", "strata" )
+colnames(anes_small) <- c("caseID", "age", "education", "black","hispanic", "income", "female", "vote_2008", "vote_2012", "weights", "psu", "strata" )
 
 
 #other variable ideas to include, all of which have a lot of observations  
@@ -155,23 +164,28 @@ Running logistic regression model with confidence intervals
 #Running a logit, generation by generation. Then looking at a summary of the results, follows by looking at and creating an object for the coeffs of the results. Then converting those results to probabilities by exp(ing) them 
 
 #Millennials
-M_genY <- svyglm(vote_2012 ~ education + unemployed + female + vote_2008 + race, design = ANESdesign_genY, family = "quasibinomial") 
+M_genY <- svyglm(vote_2012 ~ education + female + vote_2008 + black + hispanic + income, design = ANESdesign_genY, family = "quasibinomial") 
 summary(M_genY)
 genY_coef <- coef(M_genY)
 exp(genY_coef)
 
-#Baby Boomers
-M_boomer <- svyglm(vote_2012 ~ education + unemployed + female + vote_2008 + race, design = ANESdesign_boomer, family = "quasibinomial") 
-summary(M_boomer)
-boomer_coef <- coef(M_boomer)
-exp(boomer_coef)
-
 #Gen X
-M_genX <- svyglm(vote_2012 ~ education + unemployed + female + vote_2008 + race, design = ANESdesign_genX, family = "quasibinomial") 
+M_genX <- svyglm(vote_2012 ~ education + female + vote_2008 + black + hispanic + income, design = ANESdesign_genX, family = "quasibinomial") 
 summary(M_genX)
 genX_coef <- coef(M_genX)
 exp(genX_coef)
 
+#Baby Boomers
+M_boomer <- svyglm(vote_2012 ~ education + female + vote_2008 + black + hispanic + income, design = ANESdesign_boomer, family = "quasibinomial") 
+summary(M_boomer)
+boomer_coef <- coef(M_boomer)
+exp(boomer_coef)
+
+#Silent
+M_silent <- svyglm(vote_2012 ~ education + female + vote_2008 + black + hispanic + income, design = ANESdesign_silent, family = "quasibinomial") 
+summary(M_silent)
+silent_coef <- coef(M_silent)
+exp(silent_coef)
 
 #Looking at confidence intervals of parameter point estimates 
 
@@ -187,35 +201,6 @@ exp(cbind(OR = coef(M_genY), confint(M_genY)))
 Now playing with and plotting predicted probabilities based on the model
 
 ```{r}
-
-#Manually collecting probabilities
-
-####Black Millennial Woman
-#1-probability for below-high-school educated black employed woman who didn't vote in 2008
-prob_genY_ed1 <- (exp(-0.3448 - 0.3448 + 0.1249 + 0.6389))/(1+exp(-0.3448 - 0.3448 + 0.1249 + 0.6389)) 
-#2-probability for high-school educated black employed woman who didn't vote in 2008
-prob_genY_ed2 <- (exp(-0.3448 + 0.5263 + 0.1249 + 0.6389))/(1+exp(-0.3448 + 0.5263 + 0.1249 + 0.6389)) 
-#3-probability for some post-high-school educated black employed woman who didn't vote in 2008
-prob_genY_ed3 <- (exp(-0.3448 + 0.7955 + 0.1249 + 0.6389))/(1+exp(-0.3448 + 0.7955 + 0.1249 + 0.6389)) 
-#4-probability for bachelor-educated black employed woman who didn't vote in 2008
-prob_genY_ed4 <- (exp(-0.3448 + 0.8990 + 0.1249 + 0.6389))/(1+exp(-0.3448 + 0.8990 + 0.1249 + 0.6389)) 
-#5-probability for graduate-educated black employed woman who didn't vote in 2008
-prob_genY_ed5 <- (exp(-0.3448 + 1.5099 + 0.1249 + 0.6389))/(1+exp(-0.3448 + 1.5099 + 0.1249 + 0.6389)) 
-
-
-####Black Baby Boomer Woman
-#1-probability for below-high-school educated black employed woman who didn't vote in 2008
-prob_boomer_ed1 <- (exp(-0.87481 - 0.87481 + 0.22553 -0.76681))/(1+exp(-0.87481 - 0.87481 + 0.22553 -0.7668)) 
-#2-probability for high-school educated black employed woman who didn't vote in 2008
-prob_boomer_ed2 <- (exp(-0.87481 + 0.81340 + 0.22553 -0.76681))/(1+exp(-0.87481 + 0.81340 + 0.22553 -0.76681)) 
-#3-probability for some post-high-school educated black employed woman who didn't vote in 2008
-prob_boomer_ed3 <- (exp(-0.87481 + 1.12412 + 0.22553 -0.76681))/(1+exp(-0.87481 + 1.12412 + 0.22553 -0.76681)) 
-#4-probability for bachelor-educated black employed woman who didn't vote in 2008
-prob_boomer_ed4 <- (exp(-0.87481 + 1.69306 + 0.22553 -0.76681))/(1+exp(-0.87481 + 1.69306 + 0.22553 -0.76681)) 
-#5-probability for graduate-educated black employed woman who didn't vote in 2008
-prob_boomer_ed5 <- (exp(-0.87481 + 1.54687 + 0.22553 -0.76681))/(1+exp(-0.87481 + 1.54687 + 0.22553 -0.76681)) 
-
-
 
 predicted_fit <- function(alpha, beta1, beta2, beta3, beta4, beta5, 
     x1, x2, x3, x4, x5, 
@@ -241,42 +226,37 @@ predictions <- probs(predictions)
 return(predictions) 
 }
 
+
+
+predicted_fit <- function(alpha, beta1, beta2, beta3, beta4, beta5, 
+    x1, x2, x3, x4, x5, 
+    se1, se2, se3, se4, se5)
+{
+lb_fun <- function(coef, se){
+    lb <- coef - (1.96 * se)
+    return(lb)
+}
+
+ub_fun <- function(coef, se){
+    ub <- coef + (1.96 * se)
+    return(ub)
+}
+
+fit <- alpha + beta1 * x1 + beta2 * x2 + beta3 * x3 + beta4 * x4 + beta5 * x5
+lb <- alpha + lb_fun(beta1, se1) * x1  + lb_fun(beta2, se2) * x2  + lb_fun(beta3, se3) * x3
+        lb_fun(beta4, se4) * x4 + lb_fun(beta5, se5) * x5
+ub <- alpha + ub_fun(beta1, se1) * x1  + ub_fun(beta2, se2) * x2  + ub_fun(beta3, se3) * x3
+        ub_fun(beta4, se4) + ub_fun(beta5, se5)
+predictions <- c(lb, fit, ub)
+
+probs <- function(x) {(exp(x)) / (1 + exp(x)) }
+predictions <- probs(predictions)
+return(predictions) 
+}
+
 predicted_fit(-0.17336, 0.23787, -0.43932, 0.08985, 0.96896, -0.01822, 1, 0, 1, 0, 2, 0.11959, 0.37259, 0.21844, 0.22869, 0.06800)
 
-
-
-#creating a dataframe of predicted variables for plotting and other uses
-blackfem_genY_ed <- c(prob_genY_ed1, prob_genY_ed2, prob_genY_ed3, prob_genY_ed4, prob_genY_ed5)
-blackfem_boomer_ed <- c(prob_boomer_ed1, prob_boomer_ed2, prob_boomer_ed3, prob_boomer_ed4, prob_boomer_ed5)
-education <- cbind(blackfem_genY_ed, blackfem_boomer_ed)
-rownames(education) <- c("Below high school", "High school", "Some post-high", "Bachelor", "Graduate")
-colnames(education) <- c("Millennial probability", "Baby Boomer probability")
-
-#creating a data frame of fitted values for a hypothetical black woman
-blackfem_genY <- with(anes_genY, data.frame(female = 1, race = '2', vote_2008 = 0, unemployed = 0, education = factor(1:5))) 
-
-#this is an alternative we've played around with that includes the weighting columns
-#used by the survey package as well
-blackfem_genY <- with(anes_genY, data.frame(caseID = factor(1:5), weights = .506, psu = 1, strata = 6, female = 1, race = 2, vote_2008 = 0, unemployed = 0, education = factor(1:5))) 
-
-#predict probability point estimates for each fitted value.
-
-blackfem_genY$predicted_prob <- prediction(M_genY, data = blackfem_genY, type = "response")
-
-blackfem_genY$predicted_prob <- predict(M_genY, newdata = blackfem_genY, type = "response", se = TRUE)
-#another alternative
-blackfem_genY$predicted_prob <- predict(M_genY, newdata = blackfem_genY, type = "response", 
-                                        design = ANESdesign_genY)
-
-#Now to plot this with confidence intervals.
-#First, add the confidence intervals
-
-blackfem_genY <- cbind(blackfem_genY, predict(M_genY, newdata = blackfem_genY, type="link", se=TRUE))
-blackfem_genY <- within(blackfem_genY, {
-  prob <- plogis(fit)
-  LL <- plogis(fit - (1.96 * se.fit))
-  UL <- plogis(fit + (1.96 * se.fit))
-})
+prediction <- c(0.3756206, 0.5294459, 0.6935776)
 
 # want to have lines for the two generation we are comparing 
 library(ggplot2)
